--- a/index.html
+++ b/index.html
@@ -1,40 +1,62 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="منصة إبراهيم الفراتي لجمع التبرعات، دعم الحالات الإنسانية والخيرية" />
   <meta name="keywords" content="تبرع, منصة خيرية, إبراهيم الفراتي, دعم, مساعدة, الحالات الإنسانية" />
   <title>منصة تبرعات إبراهيم الفراتي</title>
+
+  <!-- خطوط و مكتبات -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <style>
     body {
       font-family: 'Tajawal', sans-serif;
       background: #f7f9fa;
       color: #1d5c57;
     }
+    /* شريط التنقل */
+    .navbar {
+      background: #1d5c57;
+    }
+    .navbar-brand, .nav-link {
+      color: white !important;
+      font-weight: bold;
+    }
+    .navbar-brand:hover, .nav-link:hover {
+      color: #f59e0b !important;
+    }
+
+    /* الهيدر */
     header {
       background: linear-gradient(90deg, #1d5c57, #134e4a);
       color: white;
-      padding: 50px 20px;
+      padding: 80px 20px;
       text-align: center;
     }
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
+
+    /* كروت التبرعات */
     .donation-card {
       background: #fff;
       border-radius: 15px;
       padding: 20px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       margin-bottom: 20px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .donation-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
     .progress-bar {
       background-color: #f59e0b;
-    }
-    footer {
-      background: #1d5c57;
-      color: white;
-      padding: 30px;
-      text-align: center;
     }
     .btn-donate {
       background: #f59e0b;
@@ -42,55 +64,146 @@
       border: none;
       padding: 10px 20px;
       border-radius: 8px;
+      transition: background 0.3s ease;
+    }
+    .btn-donate:hover {
+      background: #d97706;
+    }
+
+    /* الفوتر */
+    footer {
+      background: #1d5c57;
+      color: white;
+      padding: 30px;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    /* قسم الإحصائيات */
+    .stats {
+      background: #f59e0b;
+      color: white;
+      padding: 40px 20px;
+      border-radius: 15px;
+      margin: 40px 0;
+    }
+    .stat-box {
+      text-align: center;
+    }
+    .stat-box i {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+    .stat-box h3 {
+      font-size: 24px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
+
+  <!-- شريط التنقل -->
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">تبرعات إبراهيم الفراتي</a>
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#donate">الحالات</a></li>
+          <li class="nav-item"><a class="nav-link" href="#ways">طرق التبرع</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">من نحن</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">تواصل</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- الهيدر -->
   <header>
-    <h1>منصة تبرعات إبراهيم الفراتي</h1>
+    <h1><i class="fa-solid fa-hand-holding-heart"></i> منصة تبرعات إبراهيم الفراتي</h1>
     <p>ساهم معنا في دعم الحالات الإنسانية والخيرية</p>
     <a href="#donate" class="btn btn-donate mt-3">تبرع الآن</a>
-  </header>  <section class="container my-5" id="donate">
-    <h2 class="text-center mb-4">الحالات المحتاجة للدعم</h2><div class="donation-card">
-  <h4>حالة إسعافية – عملية قلب لطفل</h4>
-  <p>الطفل عمره 3 سنوات بحاجة لعملية عاجلة في القلب.</p>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
-  </div>
-  <p class="mt-2">تم جمع 2000 من أصل 5000 ليرة</p>
-  <a href="#" class="btn btn-donate mt-2">تبرع الآن</a>
-</div>
+  </header>
 
-<div class="donation-card">
-  <h4>سلة غذائية لأسر فقيرة</h4>
-  <p>نوفر سلال غذائية للأسر الأكثر حاجة في المنطقة.</p>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-  </div>
-  <p class="mt-2">تم جمع 1500 من أصل 2000 ليرة</p>
-  <a href="#" class="btn btn-donate mt-2">تبرع الآن</a>
-</div>
+  <!-- قسم الحالات -->
+  <section class="container my-5" id="donate">
+    <h2 class="text-center mb-4"><i class="fa-solid fa-heart-circle-plus"></i> الحالات المحتاجة للدعم</h2>
 
-  </section>  <section class="container my-5">
-    <h2 class="text-center mb-4">طرق التبرع</h2>
+    <div class="donation-card">
+      <h4>حالة إسعافية – عملية قلب لطفل</h4>
+      <p>الطفل عمره 3 سنوات بحاجة لعملية عاجلة في القلب.</p>
+      <div class="progress">
+        <div class="progress-bar" style="width: 40%;">40%</div>
+      </div>
+      <p class="mt-2">تم جمع 2000 من أصل 5000 ليرة</p>
+      <a href="#" class="btn btn-donate mt-2">تبرع الآن</a>
+    </div>
+
+    <div class="donation-card">
+      <h4>سلة غذائية لأسر فقيرة</h4>
+      <p>نوفر سلال غذائية للأسر الأكثر حاجة في المنطقة.</p>
+      <div class="progress">
+        <div class="progress-bar" style="width: 75%;">75%</div>
+      </div>
+      <p class="mt-2">تم جمع 1500 من أصل 2000 ليرة</p>
+      <a href="#" class="btn btn-donate mt-2">تبرع الآن</a>
+    </div>
+  </section>
+
+  <!-- قسم الإحصائيات -->
+  <section class="container stats text-center">
+    <div class="row">
+      <div class="col-md-4 stat-box">
+        <i class="fa-solid fa-users"></i>
+        <h3>+1500</h3>
+        <p>متبرع</p>
+      </div>
+      <div class="col-md-4 stat-box">
+        <i class="fa-solid fa-hand-holding-dollar"></i>
+        <h3>+250,000</h3>
+        <p>مبلغ تم جمعه</p>
+      </div>
+      <div class="col-md-4 stat-box">
+        <i class="fa-solid fa-people-carry-box"></i>
+        <h3>+120</h3>
+        <p>حالة مدعومة</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- طرق التبرع -->
+  <section class="container my-5" id="ways">
+    <h2 class="text-center mb-4"><i class="fa-solid fa-credit-card"></i> طرق التبرع</h2>
     <ul>
-      <li>تحويل بنكي إلى حساب: xxxx-xxxx-xxxx</li>
+      <li>تحويل بنكي: xxxx-xxxx-xxxx</li>
       <li>محفظة إلكترونية: xxx@wallet.com</li>
       <li><a href="https://www.paypal.com/donate?hosted_button_id=YOUR_BUTTON_ID" target="_blank">تبرع عبر PayPal</a></li>
     </ul>
-  </section>  <section class="container my-5">
-    <h2 class="text-center mb-4">من نحن</h2>
-    <p>منصة "إبراهيم الفراتي" هي مبادرة مجتمعية غير ربحية تهدف إلى جمع التبرعات للحالات الإنسانية ومشاريع الدعم الخيري في منطقتنا.</p>
-  </section>  <section class="container my-5">
-    <h2 class="text-center mb-4">تواصل معنا</h2>
-    <p>للاستفسار أو المساهمة:</p>
+  </section>
+
+  <!-- من نحن -->
+  <section class="container my-5" id="about">
+    <h2 class="text-center mb-4"><i class="fa-solid fa-circle-info"></i> من نحن</h2>
+    <p class="text-center">منصة "إبراهيم الفراتي" هي مبادرة مجتمعية غير ربحية تهدف إلى جمع التبرعات للحالات الإنسانية ومشاريع الدعم الخيري في منطقتنا.</p>
+  </section>
+
+  <!-- تواصل معنا -->
+  <section class="container my-5" id="contact">
+    <h2 class="text-center mb-4"><i class="fa-solid fa-envelope"></i> تواصل معنا</h2>
     <ul>
       <li>واتساب: <a href="https://wa.me/9639XXXXXXXX">اضغط هنا</a></li>
       <li>تليجرام: <a href="https://t.me/YOUR_USERNAME">@YOUR_USERNAME</a></li>
       <li>بريد إلكتروني: contact@example.com</li>
     </ul>
-  </section>  <footer>
+  </section>
+
+  <!-- الفوتر -->
+  <footer>
     جميع الحقوق محفوظة © منصة إبراهيم الفراتي - 2025
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
