--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="منصة إبراهيم الفراتي لجمع التبرعات، دعم الحالات الإنسانية والخيرية" />
-  <meta name="keywords" content="تبرع, منصة خيرية, إبراهيم الفراتي, دعم, مساعدة, الحالات الإنسانية" />
   <title>منصة تبرعات إبراهيم الفراتي</title>
-
-  <!-- خطوط و مكتبات -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
   <style>
     body {
       font-family: 'Tajawal', sans-serif;
       background: #f7f9fa;
       color: #1d5c57;
+      scroll-behavior: smooth;
     }
     /* شريط التنقل */
     .navbar {
@@ -34,26 +30,29 @@
     header {
       background: linear-gradient(90deg, #1d5c57, #134e4a);
       color: white;
-      padding: 80px 20px;
+      padding: 100px 20px;
       text-align: center;
     }
     header h1 {
       font-size: 2.5rem;
       font-weight: bold;
     }
+    header p {
+      font-size: 1.2rem;
+    }
 
     /* كروت التبرعات */
     .donation-card {
       background: #fff;
       border-radius: 15px;
-      padding: 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      padding: 25px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+      margin-bottom: 25px;
+      transition: all 0.3s ease;
     }
     .donation-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     }
     .progress-bar {
       background-color: #f59e0b;
@@ -70,22 +69,13 @@
       background: #d97706;
     }
 
-    /* الفوتر */
-    footer {
-      background: #1d5c57;
-      color: white;
-      padding: 30px;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    /* قسم الإحصائيات */
+    /* الإحصائيات */
     .stats {
       background: #f59e0b;
       color: white;
-      padding: 40px 20px;
-      border-radius: 15px;
-      margin: 40px 0;
+      padding: 50px 20px;
+      border-radius: 20px;
+      margin: 60px 0;
     }
     .stat-box {
       text-align: center;
@@ -95,8 +85,29 @@
       margin-bottom: 10px;
     }
     .stat-box h3 {
-      font-size: 24px;
+      font-size: 28px;
       font-weight: bold;
+    }
+
+    /* نموذج التواصل */
+    form {
+      background: #fff;
+      border-radius: 15px;
+      padding: 30px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+    }
+    form label {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    /* الفوتر */
+    footer {
+      background: #1d5c57;
+      color: white;
+      padding: 25px;
+      text-align: center;
+      margin-top: 50px;
     }
   </style>
 </head>
@@ -152,7 +163,7 @@
     </div>
   </section>
 
-  <!-- قسم الإحصائيات -->
+  <!-- الإحصائيات -->
   <section class="container stats text-center">
     <div class="row">
       <div class="col-md-4 stat-box">
@@ -176,7 +187,7 @@
   <!-- طرق التبرع -->
   <section class="container my-5" id="ways">
     <h2 class="text-center mb-4"><i class="fa-solid fa-credit-card"></i> طرق التبرع</h2>
-    <ul>
+    <ul class="list-unstyled text-center">
       <li>تحويل بنكي: xxxx-xxxx-xxxx</li>
       <li>محفظة إلكترونية: xxx@wallet.com</li>
       <li><a href="https://www.paypal.com/donate?hosted_button_id=YOUR_BUTTON_ID" target="_blank">تبرع عبر PayPal</a></li>
@@ -192,11 +203,25 @@
   <!-- تواصل معنا -->
   <section class="container my-5" id="contact">
     <h2 class="text-center mb-4"><i class="fa-solid fa-envelope"></i> تواصل معنا</h2>
-    <ul>
-      <li>واتساب: <a href="https://wa.me/9639XXXXXXXX">اضغط هنا</a></li>
-      <li>تليجرام: <a href="https://t.me/YOUR_USERNAME">@YOUR_USERNAME</a></li>
-      <li>بريد إلكتروني: contact@example.com</li>
-    </ul>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <form action="https://formspree.io/f/your_form_id" method="POST">
+          <div class="mb-3">
+            <label for="name" class="form-label">الاسم الكامل</label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="اكتب اسمك" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">البريد الإلكتروني</label>
+            <input type="email" class="form-control" id="email" name="_replyto" placeholder="example@email.com" required>
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">الرسالة</label>
+            <textarea class="form-control" id="message" name="message" rows="5" placeholder="اكتب رسالتك هنا..." required></textarea>
+          </div>
+          <button type="submit" class="btn btn-donate w-100">إرسال الرسالة</button>
+        </form>
+      </div>
+    </div>
   </section>
 
   <!-- الفوتر -->
